fixed css bugs and added scrollbar to output

--- a/css/style.css
+++ b/css/style.css
@@ -19,19 +19,50 @@ sm-button{
     display:block;
 }
 #otp,#otp3{
-    margin-left: 15%;
-    margin-right: 15%;}
+    margin-left: 20%;
+    margin-right: 20%;
+}
 .otpstyle{
     color: gray;
     font-weight: bold;
 }
 #otp2 {
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: 25%;
+    margin-right: 25%;
 }
 
 .otpver{
     margin-left: 20%;margin-right: 20%;
+}
+#otp1.scroll {
+    margin:4px, 4px;
+    padding:4px;
+    width: 800px;
+    height: 300px;
+    margin-left: 15%;
+    margin-right: 15%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    text-align:justify;
+}
+/* width */
+.scroll::-webkit-scrollbar {
+width: 10px;
+}
+
+/* Track */
+.scroll::-webkit-scrollbar-track {
+background: #f1f1f1;
+}
+
+/* Handle */
+.scroll::-webkit-scrollbar-thumb {
+background: #888;
+}
+
+/* Handle on hover */
+.scroll::-webkit-scrollbar-thumb:hover {
+background: #555;
 }
 @media screen and (max-width:900px){
     sm-button{
